Erster test code für das UI und das ViewModel

--- a/source/PflanzenPi.UI/PflanzenPi.UI.csproj
+++ b/source/PflanzenPi.UI/PflanzenPi.UI.csproj
@@ -20,4 +20,13 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assets\" />
+    <Folder Include="View\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PflanzenPi.Plants\PflanzenPi.Plants.csproj" />
+  </ItemGroup>
 </Project>
