Tamagotchi Image Verbindung zum Sensor aufgebaut, Testsensor angebunden, Klassen grob ausimplementiert.

--- a/source/PflanzenPi.Plants/PflanzenPi.Plants.csproj
+++ b/source/PflanzenPi.Plants/PflanzenPi.Plants.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>PflanzenPi.Plants</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PflanzenPi.Sensor\PflanzenPi.Sensor.csproj" />
+  </ItemGroup>
+
 </Project>
