--- a/source/PflanzenPi.UI/PflanzenPi.UI.csproj
+++ b/source/PflanzenPi.UI/PflanzenPi.UI.csproj
@@ -28,6 +28,7 @@
   
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+    <AvaloniaResource Include="Styles\ari_w9500\**" />
   </ItemGroup>
 
   <ItemGroup>
